[project]
name = "labeller"
version = "0.1.0"
description = "A simple tool to label timeseries tabular data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "poethepoet>=0.30.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"
show-fixes = true

[tool.ruff.lint]
select = ["A", "E", "F", "UP", "I", "W", "SIM", "RUF", "C901", ]
ignore = ["A002", "A003", "RUF012", ]
exclude = [".venv", "__ignore__", ]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests|.venv|__ignore__"

[tool.poe.tasks]
[tool.poe.tasks.lint]
help = "Lints the files"
sequence = [
    { cmd = "uv run ruff format ." },
    { cmd = "uv run ruff check . --fix" },
    { cmd = "uv run python -m mypy ." },
]

[tool.poe.tasks.test]
help = "Run unit tests"
sequence = [
    { cmd = "uv run python -m pytest ./tests" },
]

[tool.poe.tasks.all]
help = "Run all required pre-push commands"
sequence = [{ ref = "lint" }, { ref = "test" }]
